# dailyprogrammer

./: .gitignore
haskell/: DailyProgrammer.cabal
haskell/data/: 118_dates.txt  bender1.txt  bender2.txt  bender3.txt  cc1.txt  cc2.txt  contiguous_chain2.txt  lychrel-input.txt  metro1.txt  metro2.txt  metro3.txt
haskell/main/: Main.hs
haskell/src/: DailyProgrammer.hs
haskell/src/DailyProgrammer/: .EstimatePI.hs.swp  BankNumbers.hs  BinaryToASCII.hs  BowlingScore.hs  Challenge118.hs  Chester.hs  ColumnConundrum.hs  ContiguousChains.hs  EstimatePI.hs  FixedPont.hs  Fraction.hs  ISBN.hs  Lychrel.hs  MetroTile.hs  RailFence.hs  StablePairing.hs  StableParing.hs
haskell/test/: TestMain.hs
haskell/test/DailyProgrammer/: Test118.hs  TestISBN.hs  TestPairing.hs
python/: animals.py  arrows.py
python/abund_def/: README.md  abund_def.py
python/animal_guess/: README.md  animal_guess.py  animals.py  seed_questions.py
python/animal_guess/data/: animals.pkl  questions.pkl
python/animal_guess/test/: test_animal_guess.py
python/animialguess/: animalguess.py  seed_questions.py  tags
python/animialguess/test/: test_animal_guess_old.py  test_animalguess.py
python/broken_keyboard/: broken_keyboard.py
python/nonogram/: README.md  nonogram.py
python/subwords/: subwords.py  test_subwords.py
python/test/: 5test.txt  grid.txt
