name:                     DailyProgrammer
description:              Haskell solutions to reddit daily programmer problems
version:                  1.0.0
author:                   David Strickland <dstrick2989@gmail.com>
maintainer:               dstrick2989@gmail.com
copyright:                (c) 2014 David Strickland
bug-reports:              https://github.com/d-strickland/dailyprogrammer/issues
homepage:                 https://github.com/d-strickland/dailyprogrammer
category:                 Recreation
synopsis:                 David Strickland's solutions to /r/dailyprogrammer challenges
build-type:               Simple
cabal-version:            >=1.16
tested-with:              GHC>=7.6.3
license:                  GPL
license-file:             ../LICENSE

source-repository head
    type:                 git
    location:             https://github.com/d-strickland/dailyprogrammer.git

executable dp
    hs-source-dirs:       main
    main-is:              Main.hs
    build-depends:        base, DailyProgrammer
    default-language:     Haskell2010

library
    hs-source-dirs:       src
    default-language:     Haskell2010
    exposed-modules:      DailyProgrammer
    other-modules:        DailyProgrammer.Challenge118,
                          DailyProgrammer.ISBN,
                          DailyProgrammer.MetroTile,
                          DailyProgrammer.BinaryToASCII,
                          DailyProgrammer.Chester,
                          DailyProgrammer.Fraction,
                          DailyProgrammer.EstimatePI,
                          DailyProgrammer.StablePairing
    build-depends:        base >= 4, base < 5, regex-posix, old-locale, time,
                          set-monad, mtl, containers, split, KdTree, friday,
                          friday-devil >= 0.1.1.0, vector
    ghc-options:          -Wall

test-suite dp-tests
    type:                 exitcode-stdio-1.0
    default-language:     Haskell2010
    hs-source-dirs:       test, src
    main-is:              TestMain.hs
    build-depends:        base, HUnit, QuickCheck, tasty, tasty-hunit, mtl,
                          tasty-quickcheck, regex-posix, old-locale, time
